# python-prolog-Interpreter-lib

./: .gitignore  README.md  main.py  requirements.txt  setup.cfg  test.py
ppil/: __init__.py  fact.py  interpreter.py  knowledge_database.py  parser.py  pq.py  prolog_database.py  regex.py  search_util.py  unify.py  util.py
ppil/expression/: expression.py
ppil/knowledge_database/: knowledge_database.py
ppil/ppil/: __init__.py  _converter.py  _variables.py  api_instance.py
ppil/ppil/_executor/: __init__.py  _executor.py  executor.sh
ppil/ppil/_json_toolbox/: __init__.py  _json_format_checker.py  _json_parser.py
ppil/ppil/_prolog_toolbox/: _prolog_format_checker.py  _prolog_parser.py
ppil/ppil/api_instance/: _api_response_handler.py  _converter.py  _variables.py  api_instance.py
ppil/ppil/elements/: __init__.py
ppil/ppil/knowledge_database/: __init__.py  _parser.py
ppil/ppil/tests/: api_instance_tests.py  ppil_tests.py
ppil/prolog_elements/: fact.py  goal.py
ppil/query/: rule_query.py
ppil/tests/: __init__.py  _test_variables.py  api_instance_tests.py
src/ppil/: __init__.py  api.py  elem_regex.py  interpreter.py  knowledge_database.py  parser.py  regex.py
src/ppil/api_instance/: __init__.py  _converter.py  _format_checker.py  _variables.py  api.py  api_instance.py  api_response_handler.py  converter.py  executor.py  format_checker.py  format_parser.py  json_converter.py  json_parser.py  prolog_parser.py
src/ppil/elements/: __init__.py  arguments_query_connector.py  database.py  term.py  (+1 more)
test/: ppil_tests.py
tests/: __init__.py
(+30 files in other folders)
