[metadata]
name = ppil
version = 0.0.1
author = bl4drnnr
author_email = bl4drnnr@protonmail.com
description = Library for converting Prolog to Python
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/bl4drnnr/python-prolog-interpreter-lib
project_urls =
    Bug Tracker = https://github.com/bl4drnnr/python-prolog-interpreter-lib/issues
    repository = https://github.com/bl4drnnr/python-prolog-interpreter-lib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
